Upgrade deps to NeoForge release

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,12 +12,12 @@ curseforge_version=0.3
 curseforge_id=576589
 artifact_type=release
 
-architectury_version=13.0.1
+architectury_version=13.0.6
 
 fabric_loader_version=0.15.11
 fabric_api_version=0.100.1+1.21
 
 forge_version=51.0.0
-neoforge_version=21.0.4-beta
+neoforge_version=21.0.148
 
-jei_version=19.0.0.2
+jei_version=19.5.3.67
