Much broken very wow

--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -14,14 +14,10 @@ architectury {
 
 configurations {
     common
-    shadowLib
     shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
-    shadowCommon.extendsFrom shadowLib
     compileClasspath.extendsFrom common
     runtimeClasspath.extendsFrom common
     developmentNeoForge.extendsFrom common
-    implementation.extendsFrom shadowLib
-    forgeRuntimeLibrary.extendsFrom shadowLib
 }
 
 dependencies {
@@ -45,8 +41,8 @@ dependencies {
     implementation "blue.endless:jankson:1.2.1"
     shadowCommon "blue.endless:jankson:1.2.1"
 
-    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-neoforge-api:${rootProject.jei_version}"
-    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-neoforge:${rootProject.jei_version}"
+//    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-neoforge-api:${rootProject.jei_version}"
+//    modRuntimeOnly "mezz.jei:jei-${rootProject.minecraft_version}-neoforge:${rootProject.jei_version}"
 }
 
 processResources {
