--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,11 +23,11 @@ dependencies {
         exclude group: 'com.google', module: 'gson'
     }
 
-    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
+//    modCompileOnly "mezz.jei:jei-${rootProject.minecraft_version}-common-api:${rootProject.jei_version}"
 }
 
 architectury {
-    common("fabric", "forge", "neoforge")
+    common("fabric", "neoforge")
 }
 
 publishing {
