--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,23 @@
-org.gradle.jvmargs=-Xmx4096M
+org.gradle.jvmargs=-Xmx6G
 org.gradle.daemon=false
 
-minecraft_version=1.21
+minecraft_version=1.21.3
 
 platforms=fabric,forge,neoforge
 
 archives_base_name=polylib
-mod_version=2100.0.3
+mod_version=2130.0.4
 maven_group=net.creeperhost
-curseforge_version=0.3
+curseforge_version=0.4
 curseforge_id=576589
 artifact_type=release
 
-architectury_version=13.0.6
+architectury_version=14.0.3
 
-fabric_loader_version=0.15.11
-fabric_api_version=0.100.1+1.21
+fabric_loader_version=0.16.7
+fabric_api_version=0.106.1+1.21.3
 
 forge_version=51.0.0
-neoforge_version=21.0.148
+neoforge_version=21.3.0-beta
 
 jei_version=19.5.3.67
