make testmod great again

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,9 +17,9 @@ include("fabric")
 //include("forge")
 include("neoforge")
 
-//include("testmod-common")
-//include("testmod-fabric")
+include("testmod-common")
+include("testmod-fabric")
 ////include("testmod-forge")
-//include("testmod-neoforge")
+include("testmod-neoforge")
 
 rootProject.name = "polylib"
