--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.daemon=false
 
 minecraft_version=1.21.3
 
-platforms=fabric,forge,neoforge
+platforms=fabric,neoforge
 
 archives_base_name=polylib
 mod_version=2130.0.4
